# bdd-queens

./: .gitignore  CHANGELOG.md  README.md  bdd.cabal  bdd.hs
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
