cabal-version:   3.12
-------------------------------------------------------------------------------
-- | Файл конфигурации сборки проекта BDD (Binary Decision Diagrams)
-- |
-- | @authors    Egor Tarasov
-- | @maintainer eg.tarasovvvvv@gmail.com
-------------------------------------------------------------------------------



-------------------------------------------------------------------------------
-- | Метаданные проекта
-------------------------------------------------------------------------------

-- | Название проекта
name:            bdd
-- | Версия проекта (семантическое версионирование)
version:         0.1.0.0
-- | Лицензия (отсутствует)
license:         NONE
-- | Автор проекта
author:          Egor
-- | Контактное лицо для поддержки
maintainer:      eg.tarasov2002@gmail.com
-- | Тип сборки (простая)
build-type:      Simple

-------------------------------------------------------------------------------
-- | Общие настройки компилятора
-------------------------------------------------------------------------------

-- | Общие флаги компилятора для всех компонентов
common warnings
    -- | Включение всех стандартных предупреждений компилятора
    ghc-options: -Wall
----------------------------------------------------------------------------
-- | Конфигурация исполняемого файла
-------------------------------------------------------------------------------
-- | Основной исполняемый файл проекта
executable bdd
    -- | Наследование общих настроек компилятора
    import:           warnings
    -- | Главный модуль программы
    main-is:          Main.hs
    -- | Базовые зависимости
    build-depends:    base ^>=4.17.2.1
    -- | Директории с исходным кодом
    hs-source-dirs:   app
    -- | Стандартная версия языка Haskell
    default-language: Haskell2010
    -- | Полный список зависимостей:
    build-depends:
        -- | Базовые библиотеки Haskell (версионность)
        base >=4.7 && <5,
        -- | Библиотека для работы с графами (Functional Graph Library)
        fgl,
        -- | Генерация визуализации графов
        graphviz,
        -- | Эффективная работа с текстом
        text
